//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "idp" {
  database_type: 'PostgreSQL'
  Note: ''
}

Table user {
  uuid String [pk]
  password String [not null]
  profile String
  picture String
  name String [not null]
  email String [unique, not null]
  studentId String [unique, not null]
  phoneNumber String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  clients client [not null]
  consent consent [not null]
  RefreshToken refresh_token [not null]
}

Table client {
  uuid String [pk]
  secret String [not null]
  name String [not null]
  picture String
  urls String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deleteRequestedAt DateTime
  idTokenAllowed Boolean [not null, default: false]
  scopes String[] [not null]
  optionalScopes String[] [not null]
  member user [not null]
  consent consent [not null]
  RefreshToken refresh_token [not null]
}

Table refresh_token {
  token String [pk]
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime [not null]
  nonce String
  scopes String[] [not null]
  clientUuid String [not null]
  userUuid String [not null]
  client client [not null]
  user user [not null]
}

Table consent {
  clientUuid String [not null]
  userUuid String [not null]
  scopes String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  client client [not null]
  user user [not null]

  indexes {
    (clientUuid, userUuid) [pk]
  }
}

Table ClientToUser {
  clientsId String [ref: > client.uuid]
  memberId String [ref: > user.uuid]
}

Ref: refresh_token.clientUuid > client.uuid [delete: Cascade]

Ref: refresh_token.userUuid > user.uuid [delete: Cascade]

Ref: consent.clientUuid > client.uuid [delete: Cascade]

Ref: consent.userUuid > user.uuid [delete: Cascade]